# st-crew

./: .gitignore  Cargo.toml  README.md  build.rs  generate.sh  rust-toolchain.toml
.cargo/: config.toml
bevy_uws/: Cargo.toml  README.md  build.rs
bevy_uws/examples/: echo.rs
bevy_uws/src/: lib.rs
client/: icon.svg.import  index.html  package-lock.json  package.json  project.godot  server.py  tsconfig.json  vite.config.ts
client/Assets/Animations/: Animations.res  Idle.res
client/Assets/Build2/: Building2.glb  Building2.glb.import  dark.material  stone.material
client/Assets/Build3/: Building3.glb  Building3.glb.import
client/Assets/GUI/: DetailBar.png.import  HealthBar.png.import  Health_bar_empty.png.import  MiniMap_Portrait.png.import  SelectionBar.png.import  UnitBuildingImg.jpg.import  WorkerImg.jpg.import  black_tex.png.import  progress_bar.png.import  rock.png.import  transperent_tex.png.import
client/Assets/Materials/: GreenStracture.tres  SeeThroughStracture.tres  new_fog_material_visible.tres
client/Assets/Rock/: Rocks.glb.import
client/Assets/StoneUnit/: Material_001.material  Material_002.material  StoneUnit.glb  StoneUnit.glb.import
client/Assets/Tree/: BushMesh.mesh  Tree.glb  Tree.glb.import
client/Assets/UnitRing/: UnitRing.glb
client/Scenes/: world.tscn
client/Scripts/: Events.gd  FreezeButton.gd  RTSController.gd
client/src/: Manager.ts  assets.ts  main.ts  style.css  types.ts
client/src/scenes/: GameScene.ts  LoaderScene.ts  TileScene.ts  UnitScene.ts
clients/godot/: Router.gd  client.gd  client.tscn  export_presets.cfg  icon.svg.import  inspector.tscn  project.godot  server.py  world.tscn
clients/godot/Scripts/: WebSocketClient.gd
clients/godot/helpers/: json_node.gd  message.gd  utils.gd
clients/godot/scripts/: ui.gd
clients/term/: Cargo.toml
clients/term/src/: app.rs  children.rs  components.rs  main.rs  utils.rs
clients/term/src/app/: action.rs  event.rs  tui.rs
clients/term/src/components/: fps.rs  home.rs  text_input.rs
crates/commander/: Cargo.toml
crates/commander/src/: api.rs  connections.rs  data_format.rs  lib.rs  schema.rs
crates/commander/src/body/: layer.rs  mod.rs  parse_body.rs  response_body.rs  stream_format.rs
crates/commander/src/connection/: connection_id.rs  mod.rs
crates/commander/src/event/: mod.rs  payload.rs  systems.rs
crates/commander/src/plugin/: mod.rs  server.rs
crates/commander/src/response/: error.rs  mod.rs
crates/commander/src/router/: accept_headers.rs  mod.rs  schema.rs  state.rs
crates/commander/src/rpc/: call.rs  dispatch.rs  mod.rs  receiver.rs  request.rs
crates/commander_derive/: Cargo.toml
crates/commander_derive/src/: api_response.rs  lib.rs
crates/commander_sdk/: Cargo.toml
game/: .gitignore  Cargo.toml  README.md  build.rs  generate.sh
game/src/: main.rs
game/src/components/: player.rs
game/src/ecs/: mod.rs
game/src/ecs/components/: client.rs
game/src/ecs/features/: mod.rs
game/src/ecs/features/common/components/: uuid.rs
game/src/ecs/features/droids/: mod.rs
game/src/ecs/features/droids/components/: droid.rs  mod.rs
game/src/ecs/features/droids/systems/: mod.rs  spawn_loaner_droids.rs
game/src/ecs/features/energy/: mod.rs
game/src/ecs/features/energy/components/: energy.rs  mod.rs
game/src/ecs/features/energy/socket_events/: energy_changed_socket_event.rs  mod.rs
game/src/ecs/features/energy/systems/: attach_energy.rs  energy_regen.rs  mod.rs  sync_energy.rs
game/src/ecs/features/movement/: mod.rs
game/src/ecs/features/movement/components/: destination.rs  distance.rs  immobile.rs  mod.rs  moving.rs  speed.rs
game/src/ecs/features/movement/models/: distance.rs  immobile_reason.rs  mod.rs
game/src/ecs/features/movement/params/: immobility.rs  mod.rs
game/src/ecs/features/movement/socket_events/: mod.rs  movement_changed_socket_event.rs
game/src/ecs/features/movement/systems/: mod.rs  sync_movement.rs  update_positions.rs
game/src/ecs/features/players/: mod.rs
game/src/ecs/features/players/commands/: get_player_info.rs  mod.rs
game/src/ecs/features/players/components/: mod.rs  player.rs
game/src/ecs/features/players/resources/: connected_players.rs  mod.rs
game/src/ecs/features/players/systems/: mod.rs  update_connected_players.rs
game/src/ecs/features/server/: connected_players.rs  mod.rs  systems.rs
game/src/ecs/features/server/commands/: get_server_info.rs  mod.rs
game/src/ecs/features/server/messages/: get_server_message.rs  mod.rs
game/src/ecs/features/server/models/: mod.rs  server_info.rs
game/src/ecs/features/server/socket_events/: mod.rs  server_info_socket_event.rs
game/src/ecs/features/tick/: mod.rs  schedule.rs
game/src/ecs/features/tick/models/: mod.rs  tick.rs  tick_duration.rs
game/src/ecs/features/tick/resources/: mod.rs  ticks.rs
game/src/ecs/features/tick/systems/: increment_tick.rs  mod.rs
game/src/ecs/plugins/websocket/: connection.rs  connection_id.rs  connections.rs  event.rs  listener.rs  message.rs  mock.rs  mod.rs  server.rs
game/src/ecs/systems/: sockets.rs
game/src/messages/: server_stat_event.rs
game/src/plugins/: sockets.rs
game/src/utils/: mod.rs  short_type_name.rs
schemas/: asyncapi.yaml  client.fbs  message.fbs  openapi.json  schema.fbs  schema.json  shared.fbs  unit.fbs
sdk/: .gitignore  .npmignore  README.md  package-lock.json  package.json
sdk/go/: Command.go  NotPerson.go  OneOf.go  Person.go  Properties.go  UserCommand.go  generated.go
sdk/python/: generated.py
sdk/rust/: Cargo.toml  build.rs
sdk/rust/src/: command.rs  event.rs  http.rs  lib.rs
sdk/rust/src/client/: mod.rs
sdk/rust/src/models/: api_error.rs  get_player_info_command_result.rs  get_server_info_command_result.rs  mod.rs  player_info.rs  player_not_found_context.rs  server_info.rs
sdk/rust/src/server/: mod.rs
sdk/rust/src/websocket/: event.rs  mod.rs  rpc.rs
sdk/src/: index.ts
sdk/ts/: .eslintrc  package-lock.json  package.json  tsconfig.json
src/: generated.rs  main.rs  messages.rs  sockets.rs
src/messages/: mod.rs  server_stat_event.rs
(+57 files in other folders)
