[package]
name = "st_crew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remember to revert this before releasing your game!
bevy = { version = "0.12.0", default-features = false, features = ["multi-threaded", "dynamic_linking", "serialize"] }
bevy-ws-server = { git = "https://github.com/kiwiyou/bevy-ws-server", branch = "main" }

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3