[workspace]
resolver = "2"

members = ["crates/*", "game", "sdk/rust"]
default-members = ["game"]

[workspace.dependencies]
st_commander = { path = "crates/commander" }
st_crew_sdk = { path = "sdk/rust" }

rand = "0.8"
async-channel = "2.1"
futures-util = "0.3"
thiserror = "1.0"

serde = { version = "1.0", features = ["rc"] }

bevy = { version = "0.12", default-features = false }

tokio = { version = "1.0", default-features = false }

axum = { version = "0.7", default-features = false }
axum-extra = { version = "0.9", features = ["typed-header", "typed-routing"] }

schemars = "0.8"
utoipa = "4.1"
