[workspace]
resolver = "2"

members = ["crates/*", "game", "sdk/rust"]
default-members = ["game"]

[workspace.dependencies]
st_commander = { path = "crates/commander" }
st_commander_derive = { path = "crates/commander_derive" }

rand = "0.8"
async-channel = "2.1"
futures-util = "0.3"
thiserror = "1.0"
bitflags = "2.4"

serde = { version = "1.0", features = ["rc"] }
erased-serde = "0.4"
serde_json = "1.0"
rmp-serde = "1.1"

bevy = { version = "0.12", default-features = false }

tokio = { version = "1.0", default-features = false }

axum = { version = "0.7", default-features = false }
axum-extra = { version = "0.9", features = ["typed-header", "typed-routing"] }

utoipa = { version = "4.1", features = ["debug", "rc_schema"] }
