[package]
name = "st_crew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
  "multi-threaded",
  # Remember to revert dynamic_linking before releasing your game!
  "dynamic_linking",
  "serialize",
] }
bevy-ws-server = { git = "https://github.com/kiwiyou/bevy-ws-server", branch = "main" }
bevy_spatial = "0.7.0"
async-tungstenite = "0.23.0"
flatbuffers = "23.5.26"
typify-macro = "0.0.14"
rand = "0.8.4"
async_uws = "0.0.22"
uwebsockets_rs = "0.0.11"
tokio = { version = "1.34.0", features = ["full"] }

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
