[package]
name = "st_crew"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
async-channel = "2.1"
futures-util = "0.3"
thiserror = "1.0"

bevy = { version = "0.12.0", default-features = false, features = [
  "multi-threaded",
  # Remember to revert dynamic_linking before releasing your game!
  "dynamic_linking",
  "serialize",
] }
bevy_spatial = "0.7.0"

tokio = { version = "1.0.0", default-features = false, features = [
  "macros",
  "io-util",
] }
bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks", rev = "b12e1d0" }

tokio-tungstenite = "0.20"
flatbuffers = "23.5.26"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
