[package]
name = "st_crew"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
st_crew_sdk.workspace = true
st_commander.workspace = true

rand.workspace = true
async-channel.workspace = true
futures-util.workspace = true
thiserror.workspace = true

serde.workspace = true
serde_json = "1.0"

bevy = { workspace = true, default-features = false, features = [
  "multi-threaded",
  # Remember to revert dynamic_linking before releasing your game!
  "dynamic_linking",
  "serialize",
] }

axum.workspace = true
axum-extra.workspace = true

schemars.workspace = true
utoipa.workspace = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
