[package]
name = "st_crew_cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
once_cell = "1.19.0"
derive_deref = "1.1.1"
directories = "5.0.1"

color-eyre = "0.6.2"
strip-ansi-escapes = "0.2.0"
human-panic = "1.2.0"

tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"

crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.24.0", features = ["all-widgets"] }
