[package]
name = "st_commander"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
st_commander_derive.workspace = true

thiserror.workspace = true

serde.workspace = true
serde_path_to_error = "0.1"
erased-serde = "0.3"
serde_json = "1.0"
rmp-serde = "1.1"
serde_urlencoded = "0.7"
base64 = "0.21"

async-channel.workspace = true
futures-util.workspace = true
async-stream = "0.3"

mime = "0.3"

tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
] }

tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "sensitive-headers",
    "propagate-header",
    "validate-request",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
] }
axum = { workspace = true, features = [
    "macros",
    "tokio",
    "http2",
    "ws",
    "json",
    "form",
    "query",
] }
axum-extra.workspace = true

schemars.workspace = true
utoipa.workspace = true
utoipa-redoc = "2.0"

bevy.workspace = true
