[package]
name = "st_crew_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"

async-channel = "2.1"
futures-util = "0.3"

tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
] }

tungstenite = "0.21"
tokio-tungstenite = "0.21"
reqwest = { version = "0.11" }

base64 = "0.21"
